Fix breaking issues in peoplepicker - adjust button sizes and spacing issues

--- a/src/components/PeoplePicker/PeoplePicker.scss
+++ b/src/components/PeoplePicker/PeoplePicker.scss
@@ -173,6 +173,7 @@ $personaItemHeight: 42px;
 .ms-PeoplePicker-peopleListBtn {
   @include button-reset();
   position: relative;
+  box-sizing: border-box;
   height: 34px;
   width: 100%;
   background: none;
@@ -182,7 +183,7 @@ $personaItemHeight: 42px;
   padding: 0 0 0 9px;
 
   @media (min-width: $ms-screen-md-min) {
-    height: $personaItemHeight;
+    height: 48px;
   }
 
   &:hover {
@@ -195,7 +196,7 @@ $personaItemHeight: 42px;
   }
 
   &.ms-PeoplePicker-resultBtn--compact {
-    height: 30px;
+    height: 32px;
   }
 }
 
@@ -221,7 +222,7 @@ $personaItemHeight: 42px;
   text-align: center;
 
   @media (min-width: $ms-screen-md-min) {
-    height: $personaItemHeight;
+    height: 48px;
   }
 
   .ms-Icon {
@@ -382,6 +383,8 @@ $personaItemHeight: 42px;
     font-family: $ms-font-family-semilight;
     font-size: $ms-font-size-xs;
     line-height: 20px;
+    position: relative;
+    top: 12px;
   }
 }
 
@@ -394,7 +397,7 @@ $personaItemHeight: 42px;
   }
 
   .ms-PeoplePicker-resultAction {
-    height: 30px;
+    height: 32px;
 
     .ms-Icon {
       margin-top: -8px;
@@ -423,12 +426,15 @@ $personaItemHeight: 42px;
 
     .ms-Icon {
       font-size: $ms-font-size-l;
-      margin-top: -12px;
+      top: 0;
+      margin-top: 0;
+      line-height: 50px;
     }
   }
 
   .ms-PeoplePicker-searchMorePrimary {
     font-size: $ms-font-size-s;
+    line-height: 45px;
   }
 
   .ms-PeoplePicker-searchMoreSecondary {
@@ -530,6 +536,19 @@ $personaItemHeight: 42px;
       .ms-Persona .ms-Persona-secondaryText {
         display: block;
       }
+    }
+  }
+
+  .ms-PeoplePicker-resultBtn,
+  .ms-PeoplePicker-peopleListBtn {
+    @media (min-width: $ms-screen-md-min) {
+      height: $personaItemHeight;
+    }
+  }
+  
+  .ms-PeoplePicker-resultAction {
+    @media (min-width: $ms-screen-md-min) {
+      height: $personaItemHeight;
     }
   }
 
